# fin-app

./: CMakeLists.txt  application.cpp  application.h  main.cpp  qml.qrc
entities/: operations.cpp  operations.h
gui/: main.qml
repositories/: accounts_repository.cpp  accounts_repository.h
usecases/: add_operation.cpp  add_operation.h
